# vimsbrow

./: .gitignore  CMakeLists.txt
includes/: keybindings.h
includes/capi/: cef_app.h  cef_base.h  cef_browser.h  cef_client.h  cef_life_span_handler.h
includes/ui/: css.h  entry.h  ui.h
src/: keybindings.c  main.c
src/ui/: css.c  status_bar.c  ui.c
